# Extaxes

./: .env.example  .gitignore  CLAUDE.md  Justfile  README.md  docker-compose.yml  main.py  manage.py  pyproject.toml  requirements.txt
.decisions/: digest-strategy-fix_2026-05-18.md  discover-ui-redesign_2026-06-05.md  fix-chat-input-and-qa-flow_2026-05-15.md  fix-langgraph-invoke-restarts-from-entry_2026-05-15.md  fix-portfolio-totals-not-updating_2026-06-05.md  fix-quickadd-oob-swaps_2026-06-05.md  fix-strategy-adjustment-flow_2026-06-03.md  holdings-period-and-simulation_2026-06-02.md  investbuddy-improvements_2026-06-03.md  invested-chart-cost-basis_2026-06-08.md  portfolio-layout-refactor_2026-05-15.md  qa-flow-graph-restructure_2026-05-15.md  remove-goals-question_2026-06-05.md  simulation-accordion-editable-holdings_2026-06-05.md  sqlite-to-postgres-migration_2026-06-05.md  suitability-review-gates_2026-06-02.md  tax-rag-and-simulation_2026-06-01.md  tool-nodes-langsmith-logging_2026-06-02.md  ui-improvements_2026-05-18.md
accounts/: urls.py  views.py
agent/: catalog.py  graph.py  nodes.py  observability.py  price_service.py  simulation.py  state.py  tax_engine.py  test_simulation.py  tests.py  tools.py  validators.py
chat/: context_processors.py  models.py  tests.py  urls.py  views.py
digest/: tests.py  urls.py  views.py
investbuddy/: settings.py  wsgi.py
kyron/: settings.py  urls.py  wsgi.py
portfolio/: admin.py  models.py  tests.py  urls.py  views.py
rag/: admin.py  apps.py  ingest.py  models.py  retriever.py  tests.py
static/css/: main.css
(+22 files in other folders)
