[project]
name = "invest-tax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==5.0",
    "langchain-openai~=0.2",
    "langgraph~=0.2",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]~=3.2",
    "psycopg-pool~=3.2",
    "numpy~=2.0",
    "openai~=1.30",
    "pandas~=2.2",
    "python-dotenv~=1.0",
    "requests~=2.31",
    "whitenoise~=6.7",
    "yfinance~=0.2",
]